# poker_embeddings

./: .gitignore  README.md  board_texture_autoencoder.ipynb  card_embedding_pretraining.ipynb  card_embedding_pretrianing.ipynb  card_embedding_training.ipynb  constants.py  create_dom_block_data.py  create_flop_data.py  create_hand_data.py  create_hole_card_data.py  created_data.py  data_creation.ipynb  deck.yaml  definitions.txt  dom_blocker_analysis.ipynb  dom_blocker_data.ipynb  embedding_analysis.ipynb  embedding_evolution.ipynb  embedding_testing.ipynb  environment.yml  evaluate_data.py  flop_probs.ipynb  flopdata.csv  flopdata.parquet  functions  graph_data_creation.ipynb  graph_exploring.ipynb  hand.yaml  hand_embedding_training.ipynb  hand_ev_analysis.ipynb  hand_graph.ipynb  hand_strength_predictor.ipynb  hands_full.yaml  model1_training.ipynb  model2_training.ipynb  modeling_utils.py  needed_installations.txt  optimize_graph_data.ipynb  pca_embeddings.ipynb  (+25 more)
configs/: hand_rank_model.yaml  hand_rank_predictor.yaml  hand_rank_predictor_treys.yaml  hand_rank_regressor.yaml  hand_scorer.yaml
data/: flopdata.parquet  gendata.parquet  hand_similarity_labels.csv  hole_card_data.csv  one_possible_straights.txt  real_probs.parquet  results_gen.parquet  simulation_data.csv  three_possible_straights.txt  two_possible_straights.txt
data_collection/: create_base_hand_data.py  create_hand_data.py  create_preflop_blocker_data.py  process_equity_data.py  process_ev_data.py  process_uc_irvine_data.py  scrape_equity_data.py  scrape_ev_data.py  test_script.py
models/: predictors.py  (+2 more)
(+166 files in other folders)
