[project]
name = "poker-embeddings"
version = "0.1.0"
description = ""
authors = [
    {name = "Jon Campbell",email = "campbelljonjr@comcast.net"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "treys (>=0.1.8,<0.2.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "lxml (>=5.4.0,<6.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "ucimlrepo (>=0.0.7,<0.0.8)"
]

[tool.poetry.dependencies]
torch = { url = "https://download.pytorch.org/whl/cu126/torch-2.6.0%2Bcu126-cp312-cp312-manylinux_2_28_x86_64.whl"}
torchaudio = { url = "https://download.pytorch.org/whl/cu126/torchaudio-2.6.0%2Bcu126-cp312-cp312-linux_x86_64.whl"}
torchvision = { url = "https://download.pytorch.org/whl/cu126/torchvision-0.21.0%2Bcu126-cp312-cp312-linux_x86_64.whl"}

[tool.poetry]
name = "poker_embeddings"
version = "0.1.0"
description = "Embedding project for poker hands"
authors = ["Jon Campbell <campbelljonjr@comcast.net>"]
packages = [{ include = "poker_embeddings" }]


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
